Update for app launch

--- a/app/privacy.html
+++ b/app/privacy.html
@@ -8,27 +8,54 @@
         />
 
         <!-- SEO Meta Tags -->
-        <meta name="description" content="Description" />
-        <meta name="author" content="Author" />
+        <meta
+            name="description"
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+        />
+        <meta name="author" content="Ike Arias" />
 
         <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-        <meta property="og:site_name" content="" />
+        <meta property="og:site_name" content="CineMon" />
         <!-- website name -->
-        <meta property="og:site" content="" />
+        <meta property="og:site" content="https://www.cinemon.app" />
         <!-- website link -->
-        <meta property="og:title" content="" />
+        <meta
+            property="og:title"
+            content="CineMon - iPad and Mac professional camera monitor"
+        />
         <!-- title shown in the actual shared post -->
-        <meta property="og:description" content="" />
+        <meta
+            property="og:description"
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+        />
         <!-- description shown in the actual shared post -->
-        <meta property="og:image" content="" />
+        <meta
+            property="og:image"
+            content="https://www.cinemon.app/images/CineMon-iPad-Hero.jpg"
+        />
         <!-- image link, make sure it's jpg -->
-        <meta property="og:url" content="" />
+        <meta property="og:url" content="https://cinemon.app" />
         <!-- where do you want your post to link to -->
         <meta name="twitter:card" content="summary_large_image" />
         <!-- to have large image post format in Twitter -->
+        <meta name="twitter:site" content="@CineMonApp" />
+        <meta
+            name="twitter:title"
+            content="CineMon - iPad and Mac professional camera monitor"
+        />
+        <meta
+            name="twitter:description"
+            content="CineMon transforms your iPad or Mac into a professional camera monitor. It includes many tools to assist with composition, lighting, exposure, looks, quality standards, and more. It's made for filmmakers, video professionals, content creators and anyone who works with video."
+        />
+        <meta
+            name="twitter:image"
+            content="https://www.cinemon.app/images/CineMon-iPad-Hero.jpg"
+        />
 
         <!-- Webpage Title -->
-        <title>Privacy Policy - CineMon</title>
+        <title>
+            CineMon - iPad and Mac professional video and cinema camera monitor
+        </title>
 
         <!-- Styles -->
         <link
@@ -45,6 +72,24 @@
 
         <!-- Favicon  -->
         <link rel="icon" href="favicon.ico" />
+
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({
+                    "gtm.start": new Date().getTime(),
+                    event: "gtm.js",
+                });
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != "dataLayer" ? "&l=" + l : "";
+                j.async = true;
+                j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, "script", "dataLayer", "GTM-W5RFBKS9");
+        </script>
+        <!-- End Google Tag Manager -->
     </head>
     <body data-spy="scroll" data-target=".fixed-top">
         <!-- Google Tag Manager (noscript) -->
@@ -66,7 +111,7 @@
                 <!-- Image Logo -->
                 <a class="navbar-brand logo-image" href="../index.html"
                     ><img
-                        src="../images/CineMon-Logo-Horz.png"
+                        src="../images/CineMon-Logo-Horz2.png"
                         alt="alternative"
                 /></a>
 
@@ -84,39 +129,44 @@
                 >
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#header"
+                            <a
+                                class="nav-link page-scroll"
+                                href="../index.html#header"
                                 >HOME <span class="sr-only">(current)</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#demo"
-                                >DEMO</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#beta"
-                                >BETA</a
                             >
                         </li>
                         <li class="nav-item">
                             <a
                                 class="nav-link page-scroll"
-                                href="#details-spotmeters"
+                                href="../index.html#details-spotmeters"
                                 >FEATURES</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#design"
-                                >DESIGN</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#purchase"
+                            <a
+                                class="nav-link page-scroll"
+                                href="../index.html#purchase"
                                 >DOWNLOAD</a
                             >
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link page-scroll" href="#footer"
+                            <a
+                                class="nav-link page-scroll"
+                                href="../index.html#design"
+                                >DESIGN</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link page-scroll"
+                                href="../index.html#demo"
+                                >DEMO</a
+                            >
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                class="nav-link page-scroll"
+                                href="../index.html#footer"
                                 >CONTACT</a
                             >
                         </li>
@@ -276,32 +326,36 @@
                         <div class="footer-col second">
                             <h6>Links</h6>
                             <ul class="list-unstyled li-space-lg p-small">
-                                <!-- --
                                 <li>
-                                    Important:
                                     <a href="terms.html">Terms & Conditions</a>,
                                     <a href="privacy.html">Privacy Policy</a>
                                 </li>
-                                -->
                                 <li>
                                     Menu:
-                                    <a class="page-scroll" href="#header"
+                                    <a
+                                        class="page-scroll"
+                                        href="../index.html#header"
                                         >Home</a
-                                    >,
-                                    <a class="page-scroll" href="#demo">Demo</a
-                                    >,
-                                    <a class="page-scroll" href="#beta">Beta</a
                                     >,
                                     <a
                                         class="page-scroll"
-                                        href="#details-composition"
+                                        href="../index.html#details-spotmeters"
                                         >Features</a
                                     >,
-                                    <a class="page-scroll" href="#design"
+                                    <a
+                                        class="page-scroll"
+                                        href="../index.html#download"
+                                        >Download</a
+                                    >,
+                                    <a
+                                        class="page-scroll"
+                                        href="../index.html#design"
                                         >Design</a
                                     >,
-                                    <a class="page-scroll" href="#download"
-                                        >Download</a
+                                    <a
+                                        class="page-scroll"
+                                        href="../index.html#demo"
+                                        >Demo</a
                                     >
                                 </li>
                             </ul>
@@ -366,10 +420,8 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <p class="p-small">
-                            Copyright ©
-                            <a href="#your-link"
-                                >CineSpices, LLC, 2024. All rights reserved.</a
-                            >
+                            Copyright © CineSpices, LLC, 2024. All rights
+                            reserved.
                         </p>
                     </div>
                     <!-- end of col -->
@@ -382,17 +434,17 @@
         <!-- end of copyright -->
 
         <!-- Scripts -->
-        <script src="js/jquery.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
         <!-- jQuery for Bootstrap's JavaScript plugins -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
         <!-- Bootstrap framework -->
-        <script src="js/jquery.easing.min.js"></script>
+        <script src="../js/jquery.easing.min.js"></script>
         <!-- jQuery Easing for smooth scrolling between anchors -->
-        <script src="js/swiper.min.js"></script>
+        <script src="../js/swiper.min.js"></script>
         <!-- Swiper for image and text sliders -->
-        <script src="js/jquery.magnific-popup.js"></script>
+        <script src="../js/jquery.magnific-popup.js"></script>
         <!-- Magnific Popup for lightboxes -->
-        <script src="js/scripts.js"></script>
+        <script src="../js/scripts.js"></script>
         <!-- Custom scripts -->
     </body>
 </html>
